--- a/e-commerce/pages/shop.html
+++ b/e-commerce/pages/shop.html
@@ -28,7 +28,7 @@
       <!-- Navigation Links -->
       <ul id="menu" class="hidden md:flex gap-6 font-semibold">
         <li class="cursor-pointer hover:text-blue-500"><a href="/">Home</a></li>
-        <li class="cursor-pointer hover:text-blue-500"><a href="./pages/shop.html">Shop</a></li></li>
+        <li class="cursor-pointer hover:text-blue-500 underline text-blue-500"><a href="./pages/shop.html">Shop</a></li></li>
         <li class="cursor-pointer hover:text-blue-500"><a href="./pages/contact-us.html">Contact Us</a></li>
         <li class="cursor-pointer hover:text-blue-500"><a href="./pages/usercart.html">Cart</a></li>
       </ul>
@@ -42,8 +42,23 @@
       <li class="cursor-pointer hover:text-blue-500"><a href="./pages/usercart.html">Cart</a></li>
     </ul>
 
-    <!-- Nav bar End -->
 
+
+    <!-- Search section -->
+    <section class="mx-auto flex justify-between items-center px-8 py-4 bg-white w-[90%] md:w-[50%] my-4 rounded-r-full rounded-l-full">
+      <input placeholder="Search " class="w-[95%] border-none py-2 outline-none" id="search-input"/>
+      <p class="text-lg cursor-pointer" id="search-icon">🔍</p>
+
+
+    </section>
+    <!-- Category filter -->
+<section class="w-full flex justify-center">
+  <select id="category-filters" class="w-[70%] md:w-[40%] mx-auto py-2 px-4 rounded-lg md:mx-auto ">
+
+      <option value="">All</option>
+
+  </select>
+</section>
 
     <!-- products Listing -->
     <div class="">
@@ -87,6 +102,7 @@
 
   </div>
   <script type="module" src="/main.js"></script>
+  <script src="../scripts/shop.js"></script>
 </body>
  <footer class="bg-gray-800 text-gray-300 py-10">
   <div class="container mx-auto grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8 p-4">
