--- a/e-commerce/pages/usercart.html
+++ b/e-commerce/pages/usercart.html
@@ -7,7 +7,7 @@
 
   <title>Cart </title>
 </head>
-<body>
+<body class="overflow-x-hidden">
           <!-- Nav bar -->
 
     <nav class="flex justify-between items-center px-8 py-4 bg-slate-100 drop-shadow-lg">
