--- a/e-commerce/pages/checkout.html
+++ b/e-commerce/pages/checkout.html
@@ -9,7 +9,7 @@
 <body class="bg-gray-100">
 
   <!-- Main container -->
-  <div class="container mx-auto py-12 px-4">
+  <div class="container mx-auto py-12 px-4 overflow-hidden">
     <h1 class="text-3xl font-bold mb-8">Checkout</h1>
 
     <!-- Cart Summary -->
@@ -41,8 +41,8 @@
   </div>
 
   <!-- Checkout button -->
-  <div class="w-screen flex items-center justify-center">
-    <a href="./thankYou.html" class="w-screen flex justify-center items-center" >
+  <div class="">
+    <a href="./thankYou.html" class=" flex justify-center items-center" >
     <button  id="checkout-btn" class="border-2 text-gray-700 rounded-md border-gray-600 py-3 mx-auto w-[60%] font-semibold text-lg hover:text-white hover:bg-gray-600 my-4 text-center">Prodeed To Pay</button>
       </a>
   </div>
